dataset1235/2025-2/2868285114/users/221116065/executions/3792430146_359761547.log
== RUN (2025-09-02 22:17:44)
-- CODE: 
idade = int(input("Qual a idade?: "))

if idade >= 2:
  print("paga")

else:
  print(nao_paga)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
---- user output:
Qual a idade?: paga
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(nao_paga)
          ^^^^^^^^
NameError: name 'nao_paga' is not defined
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(nao_paga)
          ^^^^^^^^
NameError: name 'nao_paga' is not defined
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
---- user output:
Qual a idade?: paga
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
---- user output:
Qual a idade?: paga
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
---- user output:
Qual a idade?: paga
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 22:18:02)
-- CODE: 
idade = int(input("Qual a idade?: "))

if idade >= 2:
  print("paga")

else:
  print("nao_paga")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
---- user output:
Qual a idade?: paga
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
---- user output:
Qual a idade?: nao_paga
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
---- user output:
Qual a idade?: nao_paga
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
---- user output:
Qual a idade?: paga
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
---- user output:
Qual a idade?: paga
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
---- user output:
Qual a idade?: paga
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 22:17:49)
-- CODE: 
idade = int(input("Qual a idade?: "))

if idade >= 2:
  print("paga")

else:
  print(nao_paga)
-- EXECUTION TIME: 
0.00666667
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
---- user output:
Qual a idade?: paga
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(nao_paga)
          ^^^^^^^^
NameError: name 'nao_paga' is not defined
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(nao_paga)
          ^^^^^^^^
NameError: name 'nao_paga' is not defined
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
---- user output:
Qual a idade?: paga
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
---- user output:
Qual a idade?: paga
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
---- user output:
Qual a idade?: paga
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 22:16:15)
-- CODE: 
idade = int(input("Qual a idade?: "))


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
---- user output:
Qual a idade?:
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
---- user output:
Qual a idade?:
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
---- user output:
Qual a idade?:
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
---- user output:
Qual a idade?:
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
---- user output:
Qual a idade?:
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
---- user output:
Qual a idade?:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 22:17:31)
-- CODE: 
idade = int(input("Qual a idade?: "))

if idade >= 2:
  print("paga")

else:
  print(nao_paga)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
---- user output:
Qual a idade?: paga
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(nao_paga)
          ^^^^^^^^
NameError: name 'nao_paga' is not defined
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(nao_paga)
          ^^^^^^^^
NameError: name 'nao_paga' is not defined
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
---- user output:
Qual a idade?: paga
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
---- user output:
Qual a idade?: paga
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
---- user output:
Qual a idade?: paga
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
